Nexus/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nexus
  name: nexus
  labels:
    app: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec: # we must add init container to solving permiision denied messages fo log files
      containers:
      - name: nexus
        image: sonatype/nexus3
        ports:
          - containerPort: 8081
        volumeMounts:
        - name: nexus
          mountPath: /nexus-data
        securityContext:
          privileged: true
      volumes:
      - name: nexus
        persistentVolumeClaim:
          claimName: nexus
