Nexus/repo_svc._whitefang.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whitefang
  namespace: nexus
  labels:
    app: nexus
spec:
  ports:
  - port: 8083
    protocol: TCP
    name: specific
  selector:
    app: nexus # specified the nexus pod name
  type: NodePort
