Nexus/deploy-svc-ing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  labels:
    app: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - name: nexus
        image: sonatype/nexus3
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  labels:
    app: nexus
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nexus
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus
spec:
  ingressClassName: nexus
  rules:
  - host: nexus-app.192.168.56.110.nip.io
    http:
      paths:
      - backend:
          service:
            name: nexus
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
