Nexus/svc_ing.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: nexus
  name: nexus
  labels:
    app: nexus
spec:
  ports:
  - port: 8081
    protocol: TCP
  selector:
    app: nexus
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nexus
  name: nexus
spec:
  ingressClassName: nginx
  rules:
  - host: nexus-app.34.125.89.152.nip.io
    http:
      paths:
      - backend:
          service:
            name: nexus
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nexus-app.34.125.89.152.nip.io
    secretName: nexus-secret4ssl
status:
  loadBalancer: {}
