Nexus/whitefang-repo-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.org/client-max-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  namespace: nexus
  name: whitefang-repo
spec:
  ingressClassName: nginx
  rules:
  - host: whitefang-repo.192.168.56.102.nip.io
    http:
      paths:
      - backend:
          service:
            name: whitefang
            port:
              number: 8083
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - whitefang-repo.192.168.56.102.nip.io    
    secretName: whitefang-repo
status:
  loadBalancer: {}
